Added Sign Up and Navigation Bar

--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,27 +1,27 @@
 <div class="sign-in-card">
+  <img src="/assets/images/logo.png">
+  <h1>SIGN IN</h1>
+  <form method="post" role="form">
+    <div class="input-with-icon">
+      <input type="text" name="username" id="username" placeholder="Username">
+      <fa name="user"></fa>
+    </div>
+    <div class="input-with-icon">
+      <input type="password" name="password" id="password" tabindex="2" placeholder="Password">
+      <fa name="key"></fa>
+    </div>
+    <div>
+      <input type="submit" value="Log In">
+    </div>
+  </form>
   <div>
-    <img src = "/assets/images/logo.png">
-    <h1>LOG IN</h1>
-    <form method="post" role="form">
-      <div class = input-with-icon>
-        <input type="text" name="email" id="email" placeholder="Email Address">
-        <fa name="envelope"></fa>
-      </div>
-      <div class = input-with-icon>
-        <input type="password" name="password" id="password" tabindex="2" placeholder="Password">
-        <fa name="key"></fa>
-      </div>
-      <div>
-          <input type="submit" value="Log In">
-      </div>
-    </form>
-    <div>
-      <label class = "remember-me"><input type="checkbox"/><span>Remember Me</span></label>
-      <p>Forgot Password?</p>
-    </div>
-    <div>
-      <p>Not yet a member? Sign up here!</p>
-    </div>
+    <label class="remember-me">
+      <input type="checkbox" />
+      <span>Remember Me</span>
+    </label>
+    <p>Forgot Password?</p>
+  </div>
+  <div>
+    <p>Not yet a member? Sign up here!</p>
   </div>
 </div>
-
