Added feed component

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -11,6 +11,7 @@
       <fa name = "comment"></fa>
       <fa name = "bell"></fa>
       <fa name = "user"></fa>
+      <fa name = "power-off"></fa>
     </div>
   </div>
 </div>
