--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -55,3 +55,10 @@
         }
     }
 }
+
+@media only screen and (max-width: 380px) {
+    .nav-bar .nav-menu fa{
+        padding: 0 5px;
+        font-size: 20px;
+    }
+}
