--- a/src/global/style/_colors.scss
+++ b/src/global/style/_colors.scss
@@ -4,3 +4,8 @@ $text-color: white;
 $icon-color: white;
 $input-color: black;
 $input-background: #f2f2f2;
+$background-color: #efefef;
+$post-text-color-primary: black;
+$post-text-color-secondary: grey;
+$border-color: #efefef;
+$container-color: white;
