Added view page for sign in and sign up

--- a/src/app/components/sign-in/sign-in.component.scss
+++ b/src/app/components/sign-in/sign-in.component.scss
@@ -1,8 +1,19 @@
 @import '../../../global/style/_fonts.scss';
+@import '../../../global/style/_mixins.scss';
+
+.sign-in-card{
+    @include style-card-sign
+}
 
 .remember-me{
     line-height: 1.2;
     display: flex;
     justify-content: flex-start;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 420px) {
+    .sign-in-card{
+        @include style-card-sign-mobile;
+    }
 }
