Added Json Server for API handling

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -10,6 +10,13 @@
       <div class = "main_feed_post">
       <app-post></app-post>
       <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
+      <app-post></app-post>
       </div>
     </div>
   </div>
