--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -2,8 +2,12 @@
   <img src="/assets/images/logo.png">
   <h1>SIGN UP</h1>
   <form method="post" role="form" (ngSubmit) = "register()" #signUpForm="ngForm">
-    <div class = "error-message" *ngIf="signUpForm.submitted && hasError()">
+    <div class = "error-message">
       {{errorMessage}}
+    </div>
+    <div class="input-with-icon">
+      <input type="text" name="full-name" id="full-name" placeholder="Full Name" [(ngModel)]="user.fullName">
+      <fa name="user"></fa>
     </div>
     <div class="input-with-icon">
       <input type="email" name="email" id="email" placeholder="Email Address" [(ngModel)]="user.email">
@@ -15,10 +19,6 @@
     </div>
     <div class="input-with-icon">
       <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="user.password">
-      <fa name="key"></fa>
-    </div>
-    <div class="input-with-icon">
-      <input type="password" name="confirm-password" id="confirm-password" placeholder="Confirm Password" [(ngModel)]="user.confirmPassword">
       <fa name="key"></fa>
     </div>
     <div>
