--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,3 +32,9 @@ form input{
         padding: 15px 15px 15px 30px;
     }
 }
+
+.box-shadow{
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    border: 1px solid $border-color;
+}
