--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -1,22 +1,20 @@
-<div class = "feed">
-  <div class = "feed_container">
-    <div class = "menu_feed">
-      <div class = "menu_feed_container">
+<div class="feed">
+  <div class="feed_container">
+    <div class="menu_feed">
+      <div class="menu_feed_container">
         stst
       </div>
     </div>
-    <div class = "main_feed">
-      <input class = "feed_box" type = "text" placeholder="What's on your mind?">
-      <div class = "main_feed_post">
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
-      <app-post></app-post>
+    <div class="main_feed">
+      <div class="feed_box box-shadow">
+        <textarea placeholder="What's on your mind?" [(ngModel)]="postService.postInput" maxlength="300"></textarea>
+        <div class="postEnabled" *ngIf="postService.postInputValid()">
+          {{postService.inputCharacters}}
+          <button (click)="postService.post(postService.postInput)">Post</button>
+        </div>
+      </div>
+      <div class="main_feed_post">
+        <!-- <app-post></app-post> -->
       </div>
     </div>
   </div>
