--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -3,6 +3,9 @@
     border: 1px solid $border-color;
     display: flex;
     justify-content: center;
+    line-height: 22px;
+    font-size: 16px;
+    text-align: justify;
 
     .post_photo{
         padding: 10px;
@@ -23,12 +26,43 @@
 
         .post_main_info span{
             font-weight: bold;
-            color: $post-text-color-primary
+            color: $post-text-color-primary;
+            font-size: 18px;
         }
 
         .post_main_content{
             margin-top: 5px;
             color: $post-text-color-primary
+        }   
+    }
+
+    .vote{
+        margin:10px;
+        font-size: 20px;
+        line-height: 25px;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .post{
+        border: solid #efefef;
+        border-width: 1px 0;
+        line-height: 20px;
+        font-size: 14px;
+        text-align: left;
+
+        .post_main .post_main_info span{
+            font-size:16px;
+        }
+
+        .vote{
+            margin:5px;
+            font-size: 17px;
+            line-height: 22px;
         }
     }
 }
+
