--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -7,12 +7,12 @@
     </div>
     <div class="input-with-icon" >
       <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="user.username"
-      [ngStyle] = "rememberMeStyle()">
+      [ngClass] = "{'filled-input': isRememberEnabled}">
       <fa name="user"></fa>
     </div>
     <div class="input-with-icon">
       <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="user.password"
-      [ngStyle] = "rememberMeStyle()">
+      [ngClass] = "{'filled-input': isRememberEnabled}">
       <fa name="key"></fa>
     </div>
     <div>
