--- a/src/global/style/_mixins.scss
+++ b/src/global/style/_mixins.scss
@@ -53,3 +53,17 @@
     text-shadow: 0 0 3px #FF0000;
     padding-bottom: 5px;
 }
+
+@mixin container{
+    background: $background-color;
+    min-height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center; 
+}
+
+@mixin content-container{
+    max-width: 1012px;
+    width:100%;
+    margin: 0 40px;
+}
