--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="post_main">
     <div class="post_main_info">
-      <span>{{post.fullName}}</span> . {{post_time}}
+      <span>{{post.postContributerFullName}}</span> . {{post.timePosted | amTimeAgo}}
     </div>
     <div class="post_main_content">
       {{post.postContent}}
