Profile component connected to server

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,7 +7,7 @@
       <span>{{post.postContributerFullName}}</span> . {{post.timePosted | amTimeAgo}}
     </div>
     <div class="post_main_content">
-      {{post.postContent}}
+      <pre>{{post.postContent}}</pre>
     </div>
   </div>
   <div class="vote">
