--- a/src/global/style/_mixins.scss
+++ b/src/global/style/_mixins.scss
@@ -67,3 +67,15 @@
     width:100%;
     margin: 0 40px;
 }
+
+@mixin profile-card-container{
+    margin: 10px 0px;
+    
+    @media only screen and (max-width: 600px) {
+        margin:0;
+    }
+}
+
+@mixin no_follow{
+    padding-left:15px;
+}
