Added routing to others profile

--- a/src/app/components/follow/follow.component.html
+++ b/src/app/components/follow/follow.component.html
@@ -1,4 +1,4 @@
 <div class="follow">
-  <img src="{{follow_image_src}}">
-  <div class="name">{{follow.fullName}}</div>
+  <img src="{{follow_image_src}}" (click) = "goProfile()">
+  <div class="name" (click) = "goProfile()">{{follow.fullName}}</div>
 </div>
