--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -7,6 +7,7 @@
             <div class="user_info_name_container">
               <h1>{{userService.userFullInfo.fullName}} </h1>
               <h3>@{{userService.userFullInfo.username}}</h3>
+              <button>{{userService.followingStatus}}</button>
             </div>
           </div>
           <div class="user_info_stats">
