--- a/src/app/components/user-profile-card/followers/userFollowers.component.html
+++ b/src/app/components/user-profile-card/followers/userFollowers.component.html
@@ -1,5 +1,5 @@
-<div *ngFor="let follower of userService.userFullInfo.followers" class="followers_container">
-    <app-follow [follow] = "follower"></app-follow>
+<div *ngFor="let followers of userService.userFullInfo.followers" class="followers_container">
+    <app-user-follow [follow] = "followers"></app-user-follow>
 </div>
 
 <div class = "no_follower" *ngIf= "checkIfEmpty()">
