--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,7 +20,7 @@ form input{
     text-align: left;
     position: relative;
 
-    fa{
+    i{
         position: absolute;
         left:0;
         top:8px;
