--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,17 +1,19 @@
-<div class="nav-bar" [ngClass] = "{'increasedDivHeight': isProfileState}">
+<div class="nav-bar" [ngClass]="{'increasedDivHeight': isProfileState}">
   <div class="nav-bar-container">
-    <img class = "logo" src="/assets/images/logo.png" (click) = "viewFeed()">
-    <form class = "search-bar">
-      <div class="input-with-icon">
-      <input type="text" placeholder="Search" name="search">
-      <fa name="search"></fa>
+    <img class="logo" src="/assets/images/logo.png" (click)="viewFeed()">
+    <form class="search-bar">
+      <div class="input-with-icon" #searchBar>
+        <input type="text" placeholder="Search" name="search" autocomplete="off" [(ngModel)]="searchService.searchInput" (ngModelChange)="searchService.getList()">
+        <i class="fa fa-search"></i>
+        <div class="search-container box-shadow" *ngIf="searchService.searchActive">
+          <app-search-container></app-search-container>
+        </div>
       </div>
     </form>
-    <div class = "nav-menu">
-      <fa name = "comment"></fa>
-      <fa name = "bell"></fa>
-      <fa name = "user" (click) = "viewProfile()"></fa>
-      <fa name = "power-off" (click)="logOut()"></fa>
+    <div class="nav-menu">
+      <i class="fa fa-bell"></i>
+      <i class="fa fa-user" (click)="viewProfile()"></i>
+      <i class="fa fa-power-off" (click)="logOut()"></i>
     </div>
   </div>
 </div>
