--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -22,6 +22,7 @@
 
         .post_main_info{
             color: $post-text-color-secondary;
+            font-size: 14px;
         }
 
         .post_main_info span{
