--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -14,16 +14,90 @@
 
     .menu_feed{
         min-width: 200px;
-        float: left;
-        display: flex;
-        justify-content: center;
         padding:10px 5px;
         background: $container-color;
 
         .menu_feed_container{
-            height: 400px;
             width: 100%;
+
             border: 1px solid $border-color;
+
+            .profile_container{
+                padding: 10px 5px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+           
+                img{
+                    border-radius: 50%;
+                    height: 90px;
+                    width: 90px;
+                    margin: auto;
+                }
+
+                .user_info_name{
+                    flex-grow: 1;
+                    margin: auto;
+                    text-align: center;
+                    padding: 10px 0px;
+
+                    .user_info_name_container{
+
+                        h1{
+                            font-size: 25px;
+                            margin: 0;
+                        }
+
+                        h3{
+                            font-size: 14px;
+                            margin: 0;
+                            margin-top: 5px;
+                            color: $primary-color-2;
+                        }
+
+                        @media only screen and (max-width: 850px) {
+                            h1{
+                                font-size:20px;
+                            }
+                        }
+                    }
+                }
+
+
+                .user_info_stats{
+                    flex-grow: 2;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    margin: auto;
+                    padding: 5px;
+
+                    div{
+                        padding: 0 10px;
+                        font-size: 15px;
+                        font-weight: 600;
+                        text-align: center;
+
+                        span{
+                            color: $primary-color-1;
+                            font-size: 18px;
+                        }
+                    }
+
+                    @media only screen and (max-width: 850px) {
+                        padding: 5px 0px;
+                        
+                        div{
+                            padding: 0 5px;
+                            font-size: 13px;
+
+                                span{
+                                    font-size: 16px;
+                                }
+                        }
+                    }
+                }
+            }
         }
     }
 
