--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -4,6 +4,7 @@
 
 .feed{
    @include container;
+   padding-top: 70px;
 }
 
 .feed_container{
@@ -13,14 +14,14 @@
     
 
     .menu_feed{
-        min-width: 200px;
+        width: 250px;
         padding:10px 5px;
         background: $container-color;
 
         .menu_feed_container{
-            width: 100%;
-
+            position: fixed;
             border: 1px solid $border-color;
+            width: inherit;
 
             .profile_container{
                 padding: 10px 5px;
@@ -86,7 +87,7 @@
 
                     @media only screen and (max-width: 850px) {
                         padding: 5px 0px;
-                        
+
                         div{
                             padding: 0 5px;
                             font-size: 13px;
@@ -157,6 +158,12 @@
             margin-top: 10px;
         }
     }   
+}
+
+@media only screen and (max-width: 850px) {
+    .feed_container .menu_feed{
+        width: 200px;
+    }
 }
 
 @media only screen and (max-width: 600px) {
